tests/paczka1/fuzzy1/77533905.err
Error in line 1: A468 A468 8,8
Error in line 2: A468 A144 30,7
Error in line 15: A468 A144 24,1
Error in line 28: wklV S50 24,2
Error in line 22: A468 S50 342,7
Error in line 34: wklV S50 78,3
